adjusted spacing issues

--- a/css/Cresources.css
+++ b/css/Cresources.css
@@ -121,7 +121,7 @@ button {
 #br:hover a,
 #jb:hover a,
 #SSLT:hover a {
-  color: #fff;
+  color: #666362;
 }
 
 #jr:hover {
@@ -133,29 +133,29 @@ button {
 }
 
 #r:hover {
-  background-color: rgb(248, 47, 47);
+  border-bottom: 0.2em solid rgb(248, 47, 47);
 }
 
 #y:hover {
-  background-color: yellow;
+  border-bottom: 0.2em solid yellow;
 }
 
 #o:hover {
-  background-color: orange;
+  border-bottom: 0.2em solid orange;
 }
 
 #g:hover {
-  background-color: green;
+  border-bottom: 0.2em solid green;
 }
 
 #p:hover {
-  background-color: purple;
+  border-bottom: 0.2em solid purple;
 }
 
 #bl:hover,
 #bs:hover,
 #bg:hover {
-  background-color: rgba(0, 102, 255, 0.897);
+  border-bottom: 0.2em solid rgba(0, 102, 255, 0.897);
 }
 
 #bg:hover a {
@@ -165,7 +165,7 @@ button {
 #br:hover,
 #brs:hover,
 #brg:hover {
-  background-color: rgb(97, 32, 32);
+  border-bottom: 0.2em solid rgb(97, 32, 32);
 }
 
 #brg:hover a {
@@ -177,7 +177,7 @@ button {
 #jbg:hover,
 #b4d:hover,
 #SSLT:hover {
-  background-color: black;
+  border-bottom: 0.2em solid black;
 }
 
 #jbg:hover a {
@@ -185,7 +185,7 @@ button {
 }
 
 #jd:hover {
-  background-color: black;
+  border-bottom: 0.2em solid black;
 }
 
 #jd:hover a {
@@ -216,12 +216,18 @@ button {
     width: 560px;
     height: 400px;
   }
+  .desc-container {
+    width: 460px;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
   .videos-container video {
     width: 660px;
     height: 500px;
+  }
+  .desc-container {
+    width: 560px;
   }
 }
 
@@ -273,14 +279,14 @@ button {
 
 @media only screen and (min-width: 1367px) and (max-width: 1666px) {
   .attribute-info {
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 2.2rem;
   }
 }
 
 @media only screen and (min-width: 1667px) {
   .attribute-info {
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 2.2rem;
   }
 }
