--- a/css/resourcesMP.css
+++ b/css/resourcesMP.css
@@ -85,14 +85,14 @@
 
 @media only screen and (min-width: 1370px) and (max-width: 1809px) {
   .resources-list {
-    grid-template-columns: repeat(auto-fill, minmax(410px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     padding: 4rem 0rem;
   }
 }
 
 @media only screen and (min-width: 1810px) {
   .resources-list {
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
     padding: 5.2rem 0rem;
   }
 }
